// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`I/O Schema and related helpers > extractObjectSchema() > Feature #600: Top level refinements > should handle refined object schema 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
  },
}
`;

exports[`I/O Schema and related helpers > extractObjectSchema() > Feature #1869: Top level transformations > should handle transformations to another object 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
  },
}
`;

exports[`I/O Schema and related helpers > extractObjectSchema() > should pass the object schema through 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
  },
}
`;

exports[`I/O Schema and related helpers > extractObjectSchema() > should return object schema for the intersection of object schemas 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
    "two": {
      "_type": "ZodNumber",
    },
  },
}
`;

exports[`I/O Schema and related helpers > extractObjectSchema() > should return object schema for the union of object schemas 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodOptional",
      "value": {
        "_type": "ZodString",
      },
    },
    "two": {
      "_type": "ZodOptional",
      "value": {
        "_type": "ZodNumber",
      },
    },
  },
}
`;

exports[`I/O Schema and related helpers > extractObjectSchema() > should support ez.raw() 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "raw": {
      "_type": "ZodBranded",
      "brand": Symbol(File),
    },
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should handle no middlewares 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "four": {
      "_type": "ZodBoolean",
    },
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge input object schemas 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodIntersection",
    "left": {
      "_type": "ZodIntersection",
      "left": {
        "_type": "ZodObject",
        "shape": {
          "one": {
            "_type": "ZodString",
          },
        },
      },
      "right": {
        "_type": "ZodObject",
        "shape": {
          "two": {
            "_type": "ZodNumber",
          },
        },
      },
    },
    "right": {
      "_type": "ZodObject",
      "shape": {
        "three": {
          "_type": "ZodNull",
        },
      },
    },
  },
  "right": {
    "_type": "ZodObject",
    "shape": {
      "four": {
        "_type": "ZodBoolean",
      },
    },
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge intersection object schemas 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodIntersection",
    "left": {
      "_type": "ZodIntersection",
      "left": {
        "_type": "ZodObject",
        "shape": {
          "one": {
            "_type": "ZodString",
          },
        },
      },
      "right": {
        "_type": "ZodObject",
        "shape": {
          "two": {
            "_type": "ZodNumber",
          },
        },
      },
    },
    "right": {
      "_type": "ZodIntersection",
      "left": {
        "_type": "ZodObject",
        "shape": {
          "three": {
            "_type": "ZodNull",
          },
        },
      },
      "right": {
        "_type": "ZodObject",
        "shape": {
          "four": {
            "_type": "ZodBoolean",
          },
        },
      },
    },
  },
  "right": {
    "_type": "ZodIntersection",
    "left": {
      "_type": "ZodObject",
      "shape": {
        "five": {
          "_type": "ZodString",
        },
      },
    },
    "right": {
      "_type": "ZodObject",
      "shape": {
        "six": {
          "_type": "ZodNumber",
        },
      },
    },
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge mixed object schemas 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodIntersection",
    "left": {
      "_type": "ZodIntersection",
      "left": {
        "_type": "ZodObject",
        "shape": {
          "one": {
            "_type": "ZodString",
          },
        },
      },
      "right": {
        "_type": "ZodObject",
        "shape": {
          "two": {
            "_type": "ZodNumber",
          },
        },
      },
    },
    "right": {
      "_type": "ZodUnion",
      "options": [
        {
          "_type": "ZodObject",
          "shape": {
            "three": {
              "_type": "ZodNull",
            },
          },
        },
        {
          "_type": "ZodObject",
          "shape": {
            "four": {
              "_type": "ZodBoolean",
            },
          },
        },
      ],
    },
  },
  "right": {
    "_type": "ZodObject",
    "shape": {
      "five": {
        "_type": "ZodString",
      },
    },
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge union object schemas 1`] = `
{
  "_type": "ZodIntersection",
  "left": {
    "_type": "ZodIntersection",
    "left": {
      "_type": "ZodUnion",
      "options": [
        {
          "_type": "ZodObject",
          "shape": {
            "one": {
              "_type": "ZodString",
            },
          },
        },
        {
          "_type": "ZodObject",
          "shape": {
            "two": {
              "_type": "ZodNumber",
            },
          },
        },
      ],
    },
    "right": {
      "_type": "ZodUnion",
      "options": [
        {
          "_type": "ZodObject",
          "shape": {
            "three": {
              "_type": "ZodNull",
            },
          },
        },
        {
          "_type": "ZodObject",
          "shape": {
            "four": {
              "_type": "ZodBoolean",
            },
          },
        },
      ],
    },
  },
  "right": {
    "_type": "ZodUnion",
    "options": [
      {
        "_type": "ZodObject",
        "shape": {
          "five": {
            "_type": "ZodString",
          },
        },
      },
      {
        "_type": "ZodObject",
        "shape": {
          "six": {
            "_type": "ZodNumber",
          },
        },
      },
    ],
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Zod Issue #600: can not intersect object schema with passthrough and transformation 1`] = `
ZodError({
  "message": "[
  {
    "code": "invalid_intersection_types",
    "path": [],
    "message": "Intersection results could not be merged"
  }
]",
})
`;
